# project-healthcare

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.test-integration  Makefile  README.md  SECURITY.md  check.sh  docker-compose.yml  install.sh  pyproject.toml  run.sh  techstack.md  techstack.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: adr_template.yml  c4gt_community.yml
.github/actions/: action.yml  packages.yml
.github/workflows/: stage_ci.yml
.idx/: dev.nix
xcov19/: .pre-commit-config.yaml  check.sh  dev.py  dto.py  package-lock.json  package.json  pyproject.toml
xcov19/app/: auth.py  binders.py  database.py  dto.py  main.py  middleware.py  services.py  settings.py
xcov19/app/controllers/: __init__.py  diagnose.py  examples.py  geolocation.py
xcov19/app/docs/: __init__.py  binders.py
xcov19/domain/: common.py  repository.py  repository_interface.py
xcov19/domain/models/: __init__.py  patient.py  provider.py
xcov19/infra/: models.py
xcov19/services/: geolocation.py
xcov19/tests/: conftest.py  start_server.py  test_geolocation_api.py  test_services.py  tests_mixin.py
xcov19/tests/data/: seed_db.py
xcov19/utils/: mixins.py
